# Multi-device-model-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmark/: data_util.py
benchmark/CPU/: onnxruntime_run.py
benchmark/GPU/: onnxruntime_run.py  tensorrt_run.py
benchmark/PyTorch/: get_model.py
benchmark/PyTorch/Models/: Compat.py  Conv.py  LLM.py  Linear.py  MaxPool.py  Relu.py  Resnet.py
doc/: runtime.md
examples/: add.ll  add.mlir  add.onnx  add_constant.onnx  add_constant_splat.onnx  data_diff.py  data_util.py  gemm.onnx  genonnx.py
include/multi-device-model-compiler/: CMakeLists.txt  InitPasses.h  InitTranslations.h  InitUtils.h
include/multi-device-model-compiler/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/multi-device-model-compiler/Conversion/ConvertDeviceToLLVM/: ConvertDeviceToLLVM.h
include/multi-device-model-compiler/Conversion/ConvertDeviceToTPU/: ConvertDeviceToTPU.h
include/multi-device-model-compiler/Conversion/ConvertGPUToNVVM/: ConvertGPUToNVVM.h
include/multi-device-model-compiler/Conversion/ConvertMemrefToGPU/: ConvertMemrefToGPU.h
include/multi-device-model-compiler/Conversion/ConvertONNXToDevice/: ConvertONNXToDevice.h
include/multi-device-model-compiler/Conversion/ConvertONNXToTosa/: ConvertONNXToTosa.h
include/multi-device-model-compiler/Conversion/ConvertTosaToDevice/: ConvertTosaToDevice.h
include/multi-device-model-compiler/Conversion/ConvertTosaToLinalg/: ConvertTosaToLinalgSaveTensor.h
include/multi-device-model-compiler/Conversion/ConvertTosaToTPU/: ConvertTosaToTPU.h
include/multi-device-model-compiler/Dialect/Device/IR/: CMakeLists.txt  Device.h  DeviceBase.td  DeviceOps.td
include/multi-device-model-compiler/Dialect/Device/Transform/: CMakeLists.txt  Passes.h  Passes.td
include/multi-device-model-compiler/Kernels/CPU/: Ops.h
include/multi-device-model-compiler/Kernels/GPU/: CudaReduceKernelUtils.cuh  CudaTypeUtils.cuh  Ops.h  Utils.h
include/multi-device-model-compiler/Pass/: InitPasses.h
include/multi-device-model-compiler/Pass/ONNX/: Passes.h  Passes.td
include/multi-device-model-compiler/Pipelines/: ConvertPipelines.h
include/multi-device-model-compiler/Runtime/: ModelInfo.h  RuntimeUtil.h  TensorDescripter.h
include/multi-device-model-compiler/Runtime/CUDA/: CudaRuntimeWrappers.h
include/multi-device-model-compiler/Runtime/TPU/: TPURuntimeWrappers.h
include/multi-device-model-compiler/Utils/: CMakeLists.txt  CommandUtils.h  CompileOptions.h  CompileUtils.h  ExternalUtil.h.in
lib/: CMakeLists.txt  InitPasses.cpp  InitTranslations.cpp  InitUtils.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/ConvertDeviceToLLVM/: CMakeLists.txt  ConvertDeviceToLLVM.cpp
lib/Conversion/ConvertDeviceToTPU/: CMakeLists.txt  Clip.cpp  Conv2d.cpp  ConvertDeviceToTPU.cpp  Matmul.cpp  Pool2d.cpp
lib/Conversion/ConvertGPUToNVVM/: CMakeLists.txt  ConvertGPUToNVVM.cpp
lib/Conversion/ConvertMemrefToGPU/: Alloc.cpp  CMakeLists.txt  ConvertMemrefToGPU.cpp  Dma.cpp
lib/Conversion/ConvertONNXToDevice/: CMakeLists.txt  ConvertONNXToDevice.cpp  MultiHeadAttentionLayer.cpp
lib/Conversion/ConvertONNXToTosa/: CMakeLists.txt  ConvertONNXToTosa.cpp
lib/Conversion/ConvertONNXToTosa/Reduce/: ReduceMean.cpp
lib/Conversion/ConvertONNXToTosa/Tensor/: flatten.cpp  return.cpp
lib/Conversion/ConvertONNXToTosa/nn/: matmul.cpp
lib/Conversion/ConvertTosaToDevice/: CMakeLists.txt  Conv2d.cpp  ConvertTosaToDevice.cpp  Matmul.cpp  Pool2d.cpp
lib/Conversion/ConvertTosaToLinalg/: CMakeLists.txt  ConvertTosaToLinalgSaveTensor.cpp  clamp.cpp  fullconnect.cpp
lib/Conversion/ConvertTosaToTPU/: CMakeLists.txt  ConvertTosaToTPU.cpp
lib/Conversion/ConvertTosaToTPU/Math/: ElementWise.cpp  Matmul.cpp
lib/Conversion/ConvertTosaToTPU/Tensor/: Tensor.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Device/IR/: CMakeLists.txt  DeviceDialect.cpp  GPUOffloadingAttr.cpp
lib/Dialect/Device/Transform/: AddDeviceTypeToFunc.cpp  AsyncDependencyConvert.cpp  BufferizeOpInterfaceImpl.cpp  BufferizeOpWithAnalysis.cpp  CMakeLists.txt  CoalesceAffineForDevice.cpp  CombineGPUKernel.cpp  DeviceDataCopyGeneration.cpp  EliminateGPUMemrefSpace.cpp  FoldGPUMemcpy.cpp  OffloadingLLVMToGPU.cpp  TilingAffineForDevice.cpp  TilingAffineForGPU.cpp  TilingScfParallelDevice.cpp  VectorizeAffineForDevice.cpp
lib/Dialect/ONNX/Transform/: CMakeLists.txt  EliminateEntryPoint.cpp
lib/Kernels/: CMakeLists.txt
lib/Kernels/CPU/: CMakeLists.txt  LLM.cpp  Ops.cpp
lib/Kernels/GPU/: CMakeLists.txt  LLM.cu  LayerNorm.cu  Ops.cu  Transpose.cu  Utils.cu
lib/Pass/: CMakeLists.txt
lib/Pass/ONNX/: EliminateEntryPoint.cpp
lib/Pipelines/: CMakeLists.txt  MLIRToCPU.cpp  MLIRToGPU.cpp  MLIRToTPU.cpp  ONNXToMLIR.cpp
lib/Runtime/: CMakeLists.txt  ModelInfo.cpp  RuntimeUtil.cpp
lib/Runtime/CUDA/: CMakeLists.txt  CudaRuntimeWrappers.cpp
lib/Runtime/TPU/: CMakeLists.txt  TPURuntimeWrappers.cpp
lib/Utils/: CMakeLists.txt  CommandUtils.cpp  CompileOptions.cpp  CompileUtils.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/End2End/CPU/: add.mlir  conv.mlir  linear.mlir  pool.mlir
test/End2End/GPU/: add.mlir  conv.mlir  linear.mlir  multi_head_attention_layer.mlir  pool.mlir
test/End2End/TPU/: add.mlir  add_constant.mlir  add_constant_splat.mlir  conv.mlir  linear.mlir  pool.mlir
tools/: CMakeLists.txt
tools/model-converter/: CMakeLists.txt  model-converter.cpp
tools/multi-device-cpu-runner/: CMakeLists.txt  multi-device-cpu-runner.cpp
tools/multi-device-gpu-runner/: CMakeLists.txt  multi-device-gpu-runner.cpp
tools/multi-device-lib-generate/: CMakeLists.txt  multi-device-lib-generate.cpp
tools/multi-device-opt/: CMakeLists.txt  multi-device-opt.cpp
tools/multi-device-tpu-runner/: CMakeLists.txt  multi-device-tpu-runner.cpp
tools/multi-device-translate/: CMakeLists.txt  multi-device-translate.cpp
utils/: build-llvm.sh  build-onetbb.sh  build-protobuf.sh  configure-llvm.sh  configure-onetbb.sh  tpu-env-setup.sh
(+3 files in other folders)
