add_subdirectory(Pass)
add_subdirectory(Conversion)
add_subdirectory(Pipelines)
add_subdirectory(Runtime)
add_subdirectory(Utils)

add_library(MultiDeviceInitUtils STATIC InitUtils.cpp)
target_link_libraries(MultiDeviceInitUtils PUBLIC OMONNXRewrite OMShapeInferencePass 
OMInstrumentONNX OMOpTransform OMHybridTransform OMONNXSimplifyShapeRelatedOps OMONNXToTOSA
MultiDevicePipelines MultiDevicePasses)