if(ONLY_BUILD_PLAIN_RUNTIME)
    add_subdirectory(multi-device-cpu-runner)    
else()

add_subdirectory(model-converter)
add_subdirectory(multi-device-cpu-runner)
add_subdirectory(multi-device-tpu-runner)
add_subdirectory(multi-device-lib-generate)
add_subdirectory(multi-device-opt)
add_subdirectory(multi-device-translate)
if(USE_CUDA_SUPPORT)
    add_subdirectory(multi-device-gpu-runner)
endif()

endif()