add_subdirectory(ConvertONNXToTosa)
add_subdirectory(ConvertTosaToTPU)
add_subdirectory(ConvertGPUToNVVM)
add_subdirectory(ConvertMemrefToGPU)
add_subdirectory(ConvertDeviceToLLVM)
add_subdirectory(ConvertTosaToLinalg)

add_library(MultiDeviceConvertPasses INTERFACE)
target_link_libraries(MultiDeviceConvertPasses INTERFACE
ConvertTosaToTPU 
ConvertONNXToTosaFix 
ConvertGPUToNVVMFix
ConvertMemrefToGPU
ConvertDeviceToLLVM
ConvertTosaToLinalgSaveTensor)