add_subdirectory(ConvertONNXToTosa)
add_subdirectory(ConvertTosaToTPU)
add_subdirectory(ConvertGPUToNVVM)
add_subdirectory(ConvertMemrefToGPU)
add_subdirectory(ConvertDeviceToLLVM)
add_subdirectory(ConvertTosaToLinalg)
add_subdirectory(ConvertTosaToDevice)
add_subdirectory(ConvertDeviceToTPU)
add_subdirectory(ConvertONNXToDevice)

add_library(MultiDeviceConvertPasses INTERFACE)
target_link_libraries(MultiDeviceConvertPasses INTERFACE
ConvertTosaToTPU 
ConvertONNXToTosaFix 
ConvertGPUToNVVMFix
ConvertMemrefToGPU
ConvertDeviceToLLVM
ConvertTosaToLinalgSaveTensor
ConvertTosaToDevice
ConvertDeviceToTPU
ConvertONNXToDevice)