add_library(MultiDevicePipelines STATIC ONNXToMLIR.cpp MLIRToCPU.cpp)
target_link_libraries(MultiDevicePipelines PUBLIC 
MLIRPass MLIRTransforms 
OMONNXRewrite OMShapeInferencePass OMOpTransform OMHybridTransform OMONNXSimplifyShapeRelatedOps 
MLIRTosaDialect MLIRTosaTransforms MLIRTosaToLinalg MLIRTosaToArith MLIRTosaToTensor MLIRTensorToLinalg
MLIRBufferizationTransforms MLIRFuncTransforms MLIRArithTransforms MLIRTensorTransforms
ConvertONNXToTosaFix)