add_library(MultiDevicePipelines STATIC ONNXToMLIR.cpp MLIRToCPU.cpp MLIRToTPU.cpp)
target_link_libraries(MultiDevicePipelines PUBLIC 
MLIRPass MLIRTransforms 
OMONNXRewrite OMShapeInferencePass OMOpTransform OMHybridTransform OMONNXSimplifyShapeRelatedOps 
MLIRTosaDialect MLIRTosaTransforms 
MLIRTosaToLinalg MLIRTosaToArith MLIRTosaToTensor MLIRTensorToLinalg MLIRAffineToStandard MLIRVectorToLLVM
MLIRSCFToControlFlow MLIRArithToLLVM MLIRFuncToLLVM MLIRControlFlowToLLVM MLIRMemRefToLLVM MLIRReconcileUnrealizedCasts
MLIRBufferizationTransforms MLIRFuncTransforms MLIRArithTransforms MLIRTensorTransforms MLIRAffineTransforms MLIRLLVMIRTransforms
ConvertONNXToTosaFix MultiDevicePasses)