add_library(MultiDevicePipelines STATIC ONNXToMLIR.cpp MLIRToCPU.cpp MLIRToTPU.cpp MLIRToGPU.cpp)
target_link_libraries(MultiDevicePipelines PUBLIC 
MLIRPass MLIRTransforms 
OMONNXRewrite OMShapeInferencePass OMOpTransform OMHybridTransform OMONNXSimplifyShapeRelatedOps 
MLIRNVVMToLLVM MLIRNVGPUTransforms  MLIRLinalgTransforms
MLIRTosaDialect MLIRTosaTransforms MLIRVectorToGPU MLIRGPUTransforms MLIRGPUToNVVMTransforms MLIRNVGPUToNVVM MLIRGPUToGPURuntimeTransforms
MLIRTosaToLinalg MLIRTosaToArith MLIRTosaToTensor MLIRTensorToLinalg MLIRAffineToStandard MLIRVectorToLLVM MLIRSCFToGPU
MLIRSCFToControlFlow MLIRArithToLLVM MLIRFuncToLLVM MLIRControlFlowToLLVM MLIRMemRefToLLVM MLIRReconcileUnrealizedCasts
MLIRBufferizationTransforms MLIRFuncTransforms MLIRArithTransforms MLIRTensorTransforms MLIRAffineTransforms MLIRLLVMIRTransforms
ConvertONNXToTosaFix MultiDevicePasses)