add_llvm_executable(multi-device-translate multi-device-translate.cpp)

target_link_libraries(multi-device-translate PUBLIC
MLIRIR MLIRParser MLIRPass MLIRSupport MLIRTargetCpp MLIRTargetLLVMIRExport MLIRToLLVMIRTranslationRegistration
MultiDeviceInitTranslations MultiDeviceCompileUtils MultiDeviceDeviceDialect)