add_library(MultiDeviceDevicePass STATIC 
AddDeviceTypeToFunc.cpp 
AsyncDependencyConvert.cpp
OffloadingLLVMToGPU.cpp 
EliminateGPUMemrefSpace.cpp
TilingAffineForDevice.cpp
BufferizeOpWithAnalysis.cpp)

add_dependencies(MultiDeviceDevicePass MultiDeviceDevicePassIncGen)

target_link_libraries(MultiDeviceDevicePass PUBLIC 
MultiDeviceDeviceDialect
MLIRBuiltinToLLVMIRTranslation
MLIRGPUDialect
MLIRSCFTransforms
MLIRIR
MLIRLLVMDialect
MLIRLLVMToLLVMIRTranslation)