add_library(MultiDeviceDevicePass STATIC 
AddDeviceTypeToFunc.cpp 
AsyncDependencyConvert.cpp
OffloadingLLVMToGPU.cpp 
EliminateGPUMemrefSpace.cpp
TilingScfParallelDevice.cpp
BufferizeOpWithAnalysis.cpp
VectorizeAffineForDevice.cpp
BufferizeOpInterfaceImpl.cpp
CoalesceAffineForDevice.cpp
CombineGPUKernel.cpp
FoldGPUMemcpy.cpp)

add_dependencies(MultiDeviceDevicePass MultiDeviceDevicePassIncGen)

target_link_libraries(MultiDeviceDevicePass PUBLIC 
MultiDeviceDeviceDialect
MLIRBuiltinToLLVMIRTranslation
MLIRGPUDialect
MLIRSCFTransforms
MLIRLinalgTransforms
MLIRIR
MLIRLLVMDialect
MLIRLLVMToLLVMIRTranslation)